[package]
name = "rs-1brc"
version = "0.1.0"
edition = "2021"
authors = ["Matthew H. GeistInDerSH@gmail.com"]

[profile.dev]
overflow-checks = false
opt-level = 3
debug = "limited"
strip = "none"
debug-assertions = false
lto = false
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = "none"
split-debuginfo = "off"
strip = "symbols"
incremental = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]